--- a/package.json
+++ b/package.json
@@ -5,14 +5,21 @@
   "main": "./bin/www.js",
   "scripts": {
     "start": "node ./bin/www.js",
-    "development": "set DEBUG=express:* & nodemon ./bin/www.js",
+    "dev": "set DEBUG=express:* & nodemon ./bin/www.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "debug": "^4.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "http-errors": "^1.8.0",
+    "joi": "^17.2.1",
+    "mongoose": "^5.10.9",
     "morgan": "^1.10.0"
   }
 }
